# IDE-Arena

./: .gitignore  Dockerfile.k8s  README.md  agent_utils.py  azure.env.template  constants.py  docker_utils.py  grader.py  harness.py  instructions.md  k8s-requirements.txt  k8s-setup.md  main.py  package-lock.json  pyproject.toml  requirements.txt  util.py
app/: layout.tsx  page.tsx
app/api/idearena/logs/: route.ts
app/config/: models.ts
datasets/game-engine-service/: Dockerfile  docker-compose.yaml
datasets/game-engine-service/tasks/task-1/: docker-compose.yaml  run-tests.sh  task_description.txt  task_diff.txt  task_tests.py
datasets/game-engine-service/tasks/task-10/: docker-compose.yaml  run-tests.sh  task_description.txt  task_diff.txt  task_tests.py
datasets/game-engine-service/tasks/task-2/: docker-compose.yaml  task_description.txt  task_diff.txt  task_tests.py
datasets/game-engine-service/tasks/task-3/: docker-compose.yaml  task_description.txt  task_diff.txt  task_tests.py
datasets/game-engine-service/tasks/task-4/: task_diff.txt  (+3 more)
k8s/: __init__.py  controller_server.py  dataset-manager.py  eval_runner.py  job-controller.py
k8s/manifests/: configmap.yaml  controller-deployment.yaml  dataset-volume.yaml  gcp-service-account.yaml  job-template.yaml  namespace.yaml  rbac.yaml  secrets.yaml
k8s/monitoring/: install-monitoring.sh  metrics-server.py  prometheus-config.yaml
k8s/scripts/: build-push.sh  cleanup.sh  deploy.sh  run-evals.sh  setup-k8s.sh  upload-datasets.sh
utilities/: run_all_tasks.py
utils/storage/: __init__.py  gcs_uploader.py
(+21 files in other folders)
